--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ flutter:
   assets:
     - assets/baby.png
     - assets/babys.png
+    - assets/baby1.png
+    - assets/baby2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
